tests/ui/borrowck/borrowck-uninit.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit.rs:5:9
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     foo(x);
   |         ^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `a` isn't initialized
  --> $DIR/borrowck-uninit.rs:14:32
   |
LL |     let (a, );
   |          - binding declared here but left uninitialized
...
LL |     let _: (u8, u8, u8, u8) = (a, b, c, d);
   |                                ^ `a` used here but it isn't initialized

error[E0381]: used binding `b` isn't initialized
  --> $DIR/borrowck-uninit.rs:14:35
   |
LL |     let [b, ];
   |          - binding declared here but left uninitialized
...
LL |     let _: (u8, u8, u8, u8) = (a, b, c, d);
   |                                   ^ `b` used here but it isn't initialized

error[E0381]: used binding `c` isn't initialized
  --> $DIR/borrowck-uninit.rs:14:38
   |
LL |     let A(c);
   |           - binding declared here but left uninitialized
LL |     let B { d };
LL |     let _: (u8, u8, u8, u8) = (a, b, c, d);
   |                                      ^ `c` used here but it isn't initialized

error[E0381]: used binding `d` isn't initialized
  --> $DIR/borrowck-uninit.rs:14:41
   |
LL |     let B { d };
   |             - binding declared here but left uninitialized
LL |     let _: (u8, u8, u8, u8) = (a, b, c, d);
   |                                         ^ `d` used here but it isn't initialized

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0381`.
